[gd_scene load_steps=8 format=3 uid="uid://dkuuxu5k1u7ga"]

[ext_resource type="Script" path="res://scenes/puck.gd" id="1_2kph6"]
[ext_resource type="PackedScene" uid="uid://bxyd1te8fawp4" path="res://utils/field_collider.tscn" id="3_1gnc0"]
[ext_resource type="Shader" path="res://mats/puck.gdshader" id="4_wh22t"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xx7hj"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ym74y"]
height = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yo1wh"]
render_priority = 0
shader = ExtResource("4_wh22t")

[sub_resource type="CylinderMesh" id="CylinderMesh_18h44"]
material = SubResource("ShaderMaterial_yo1wh")
height = 0.3

[node name="Puck" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_2kph6")

[node name="LiveTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="FieldCollider" parent="." node_paths=PackedStringArray("parent_body") instance=ExtResource("3_1gnc0")]
shape = SubResource("SphereShape3D_xx7hj")
radius = 0.5
parent_body = NodePath("")

[node name="Shape" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ym74y")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_18h44")

[node name="StraightTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[connection signal="timeout" from="LiveTimer" to="." method="_on_live_timer_timeout"]
